Fix modernizer violation: use Path.of() instead of Paths.get() in DisconnectedLogDestinationTest
Agent-Logs-Url: https://github.com/psi-probe/psi-probe/sessions/08535ab5-1d90-4e3b-8193-aea42dd94c8f

Co-authored-by: hazendaz <975267+hazendaz@users.noreply.github.com>